<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/bluetooth"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="30sp"/>
        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/connectState"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtBtState"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:textSize="16dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9e9e9e" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/device"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/txtBtDevice"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:textSize="16dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9e9e9e" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/addressDevice"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/txtBtAddress"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:textSize="16dp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9e9e9e" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <Button
                android:id="@+id/btnBtList"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="#000000"
                android:text="@string/listBluetooth"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnBtConnect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#000000"
                android:text="@string/connect"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textStyle="bold"/>
            <View
                android:layout_width="5dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"/>
            <Button
                android:id="@+id/btnBtDisconnect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#000000"
                android:text="@string/disconnect"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/stateWifi"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtInfoWlan"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:textSize="16dp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9e9e9e" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/idWifi"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtWifiID"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:textSize="16dp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9e9e9e" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/pwWifi"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/editWifiPw"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:textSize="16dp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9e9e9e" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnWifiSearch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#000000"
                android:text="@string/searchWifi"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textStyle="bold" />
            <View
                android:layout_width="5dp"
                android:layout_height="50dp"
                android:background="#FFFFFF" />
            <Button
                android:id="@+id/btnWifiConnect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#000000"
                android:text="@string/connectWifi"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

