<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reptile"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="30sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#000000"/>
        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:textColor="#5F5F5F"
            android:textSize="18dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:src="@drawable/temperature" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/temp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#000000"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:gravity="right"
                android:layout_gravity="right"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <ProgressBar
                android:id="@+id/progressTemp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:max="100"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/progressbar_progressbar1"
                android:layout_width="match_parent"
                android:layout_height="12dp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9e9e9e" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:src="@drawable/humidity" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:textStyle="bold"
                android:text="@string/humi"
                android:textSize="20dp"
                android:textColor="#000000"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/txtHum"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:layout_marginEnd="20dp"
                android:gravity="right"
                android:textColor="#000000"
                android:layout_gravity="right"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <ProgressBar
                android:id="@+id/progressHumi"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:max="100"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/progressbar_progressbar2"
                android:layout_width="match_parent"
                android:layout_height="12dp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9e9e9e" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnShowStreaming"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#000000"
                android:scaleType="fitCenter"
                android:textColor="#ffffff"
                android:text="STREAMING"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnInstantFeed"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:layout_weight="1.2"
                android:gravity="center"
                android:background="#000000"
                android:textColor="#ffffff"
                android:text="@string/instantFeed"
                android:textSize="20sp" />
            <View
                android:layout_width="5dp"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btnDeleteAutoFeed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#000000"
                android:scaleType="fitCenter"
                android:text="@string/deleteAutoFeed"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_marginStart="2dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnSetFeeding"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|right"
                android:gravity="center"
                android:textStyle="bold"
                android:background="#000000"
                android:textColor="#ffffff"
                android:text="@string/setAutoFeed"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

